Made things way neater, add centralArea support.